# Rust-Website

./: .nev  Cargo.toml
src/: main.rs
static/: index.html  main.html
