[package]
name = "rust_auth_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
bcrypt = "0.17.0"
mongodb = "3.2.3"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
jsonwebtoken = "9.3.1"
chrono = "0.4"
tower-http = { version = "0.6", features = ["fs"] }
cookie = "0.18.1"
tokio = { version = "1", features = ["full"] }
